--- a/src/main/resources/locales/en-US.yml
+++ b/src/main/resources/locales/en-US.yml
@@ -181,5 +181,5 @@ news:
 controlpanel:
    title: "&AGreenhouses"
 test:
-   test-line: "This is a test for git localize"
+   test-line: "This is a test for git localize 2"
 
