Minor typos and grammar fixes

--- a/src/main/resources/locales/en-US.yml
+++ b/src/main/resources/locales/en-US.yml
@@ -59,9 +59,9 @@ greenhouses:
           FAIL_TOO_MANY_DOORS: "&c You cannot have more than 4 doors in the greenhouse!"
           FAIL_TOO_MANY_HOPPERS: "&c Only one hopper is allowed in the walls or roof."
           FAIL_UNEVEN_WALLS: "&c The walls are uneven. Red glass blocks should show the problem blocks."
-          FAIL_INSUFFICIENT_ICE: "&c Insufficent ice to make this recipe"
-          FAIL_INSUFFICIENT_LAVA: "&c Insufficent lava to make this recipe"
-          FAIL_INSUFFICIENT_WATER: "&c Insufficent water to make this recipe"
+          FAIL_INSUFFICIENT_ICE: "&c Insufficient ice to make this recipe"
+          FAIL_INSUFFICIENT_LAVA: "&c Insufficient lava to make this recipe"
+          FAIL_INSUFFICIENT_WATER: "&c Insufficient water to make this recipe"
           FAIL_NO_ICE: "&c Ice is required to make this recipe"
           FAIL_NO_LAVA: "&c Lava is required to make this recipe"
           FAIL_NO_WATER: "&c Water is required to make this recipe"
